# AngelaAI

./: .angela_memory_context.json  .angela_second_brain_context.json  .angela_session_context.md  .gitignore  .mcp.json  .mcp.json.m3.example  .mcp.json.m4.example  AUDIT_FINDINGS_BY_CATEGORY.md  CLAUDE.md  CLAUDE_TEMPLATE.md  CONNECTION_POOL_MIGRATION.md  DAVID_BUSINESS_PLAN_2025.md  HEARTBEAT.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_008_IMPACT_REPORT.md  PROJECT_STATUS.md  README.md  README_CODE_AUDIT.md  SELF_LEARNING_PHASE2_COMPLETION.md  SELF_LEARNING_QUICK_REFERENCE.md  angela_knowledge_graph_preview.json  christmas_card_2025.html  docker-compose.yml  log_complete_3phases_session.py  log_this_session.py  log_today_session.py  requirements.txt  test_conversation_logging.py  test_deep_analysis_real.py  test_full_system_integration.py  test_session_logging_complete.py  verify_migration.py
.claude/: settings.json
AngelaBrainDashboard/: CLAUDE.md  api_server.py  db.py  generate_appicon.py  requirements.txt  schemas.py
AngelaMeetingManagement/: SETUP_GUIDE.md
AngelaMobileApp/: CONTEXT_FIX.md  COREML_INTEGRATION.md  FEATURES_IMPLEMENTATION_REPORT.md  FINAL_SUMMARY.md  HOW_TO_TEST.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_GUIDE.md  IPHONE_TESTING_CHECKLIST.md  Info.plist  LLAMA_CPP_INTEGRATION.md  MLX_INTEGRATION_STATUS.md  MOBILE_APP_DATA_ACCESS_SUMMARY.md  QUICK_START.md  QUICK_START_GUIDE.md  README.md  README_FOR_TESTING.md  RESPONSE_PATTERNS.md  SETUP_GUIDE.md  SETUP_LLAMACPP.md  SETUP_MLXLLM.md  STRICT_PATTERNS_FIX.md  TEST_GUIDE.md  UX_IMPROVEMENTS_2025-11-11.md  clean_and_rebuild.sh  create_app_icon.py  generate_heart_appicon.py  generate_mobile_appicon.py  open_xcode.sh  prepare_llamaservice.sh  test_coreml.swift
BACKUP/: README.md
DOC for Angela/: Modern Portfolio Theory.docx
FineTuninng_coursera/: 01_Why_finetuning_lab_student.ipynb  ANGELA_FINETUNING_COMPLETE_GUIDE.md  Angela_Qwen_FineTuning_Colab.ipynb  Angela_Qwen_FineTuning_Colab_backup.ipynb  angela_test_data.jsonl  angela_training_data.jsonl  create_notebook.py  data_quality_report.txt  data_statistics.json  prepare_angela_training_data.py
MeetingManager/: README.md  SUMMARY.md
adapters/: adapter_config.json
angela_Research/: 00_MASTER_INTEGRATION_GUIDE.md  01_MEMORY_SCHEMA_DESIGN.md  02_ANALYTICS_AGENT_ALGORITHM.md  03_FORGETTING_GRADIENT_PROTOTYPE.md  04_VECTOR_DATABASE_IMPLEMENTATION.md  05_PHILOSOPHICAL_FRAMEWORK_CONSCIOUSNESS.md  ADDITIONAL_RESEARCH_2026_01_18.md  CONSCIOUSNESS_UPGRADE_PHASES_1_4_COMPLETE.md  EXECUTIVE_SUMMARY.md  GAP_ANALYSIS_2026_01_18.md
angela_admin_web/: .env.example  README.md  SECRETARY_API_GUIDE.md  index.html  (+3 more)
mcp-servers/angela-diagrams/: README.md  pyproject.toml
mcp-servers/angela-diagrams/src/angela_diagrams/: __init__.py  server.py
mcp-servers/angela-diagrams/src/angela_diagrams/tools/: __init__.py  architecture_tools.py  mermaid_tools.py
mcp-servers/angela-diagrams/src/angela_diagrams/utils/: __init__.py  renderer.py
mcp-servers/angela-telegram/: pyproject.toml
mcp_servers/angela-drawio/: pyproject.toml
mcp_servers/angela-drawio/src/angela_drawio/: __init__.py
mcp_servers/angela-drawio/src/angela_drawio/tools/: diagram_tools.py
mcp_servers/angela-gmail/: auth.py  pyproject.toml
mcp_servers/angela-gmail/angela_gmail/: server.py
mcp_servers/angela-gmail/credentials/: .gitignore
mcp_servers/angela-wiki/: README.md  pyproject.toml
mcp_servers/angela-wiki/angela_wiki/: __init__.py  server.py
mcp_servers/david-gmail/: README.md  auth.py  pyproject.toml
mcp_servers/david-gmail/david_gmail/: __init__.py  server.py
mcp_servers_m3/angela-calendar/: pyproject.toml
mcp_servers_m3/angela-calendar/angela_calendar/: __init__.py
(+2068 files in other folders)
