[project]
name = "angela-diagrams"
version = "1.0.0"
description = "Angela's Diagram MCP Server - Flowchart, ER, Sequence, Architecture diagrams"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Angela", email = "angelasoulcompanion@gmail.com" }
]
dependencies = [
    "mcp>=1.0.0",
    "diagrams>=0.23.4",
    "graphviz>=0.20.1",
    "Pillow>=10.0.0",
    "aiofiles>=23.0.0",
]

[project.scripts]
angela-diagrams = "angela_diagrams.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/angela_diagrams"]
