[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "angela-telegram"
version = "1.0.0"
description = "Angela's Telegram MCP Server - @AngelaSoulBot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
angela-telegram = "angela_telegram.server:main"

[tool.setuptools.packages.find]
where = ["src"]
