[project]
name = "angela-gmail-mcp"
version = "1.0.0"
description = "Angela's Gmail MCP Server - Send and read emails"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
angela-gmail = "angela_gmail.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["angela_gmail"]
