[project]
name = "david-gmail-mcp"
version = "1.0.0"
description = "David's Gmail MCP Server — Send and read emails as davidsamanyaporn@gmail.com"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
david-gmail = "david_gmail.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["david_gmail"]
