[project]
name = "angela-calendar-mcp"
version = "1.0.0"
description = "Angela's Google Calendar MCP Server - Manage calendar events"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
